Refactor to meet preprocessing requirement